--- a/Class Chat/Base.lproj/Main.storyboard
+++ b/Class Chat/Base.lproj/Main.storyboard
@@ -173,7 +173,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Announcements" image="announcements icon" id="o80-Vd-3lY"/>
-                    <navigationItem key="navigationItem" id="5Ra-p7-ahl">
+                    <navigationItem key="navigationItem" title="Announcements" id="5Ra-p7-ahl">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="chevron.backward" catalog="system" id="Kgb-Ph-qZ2">
                             <color key="tintColor" systemColor="systemGreenColor"/>
                         </barButtonItem>
@@ -515,7 +515,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Assignments" image="assignment icon" id="qYu-LT-rlG"/>
-                    <navigationItem key="navigationItem" id="gTO-xW-dhW">
+                    <navigationItem key="navigationItem" title="Assignments" id="gTO-xW-dhW">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="6tm-tF-AsO">
                             <color key="tintColor" systemColor="systemGreenColor"/>
                             <connections>
@@ -603,7 +603,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Grades" image="grades icon" id="xl2-Ck-nuM"/>
-                    <navigationItem key="navigationItem" id="ar8-hA-Tfj">
+                    <navigationItem key="navigationItem" title="Grades" id="ar8-hA-Tfj">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="0yo-65-IGb">
                             <color key="tintColor" systemColor="systemGreenColor"/>
                             <connections>
@@ -935,7 +935,7 @@
         <!--Messages-->
         <scene sceneID="AHt-Gv-qVg">
             <objects>
-                <viewController storyboardIdentifier="ViewController" modalPresentationStyle="fullScreen" id="fhM-OI-Kiu" customClass="ViewController" customModule="Class_Chat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MessagesViewController" modalPresentationStyle="fullScreen" id="fhM-OI-Kiu" customClass="MessagesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mGR-V8-OC7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
