--- a/Class Chat/Base.lproj/Main.storyboard
+++ b/Class Chat/Base.lproj/Main.storyboard
@@ -682,7 +682,7 @@
         <!--Classes-->
         <scene sceneID="RY3-us-KoF">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="BKi-sN-X6S" customClass="ClassesViewController" customModule="Class_Chat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ClassesViewController" modalPresentationStyle="fullScreen" id="BKi-sN-X6S" customClass="ClassesViewController" customModule="Class_Chat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="49w-MZ-auq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -935,7 +935,7 @@
         <!--Messages-->
         <scene sceneID="AHt-Gv-qVg">
             <objects>
-                <viewController storyboardIdentifier="MessagesViewController" modalPresentationStyle="fullScreen" id="fhM-OI-Kiu" customClass="MessagesViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MessageViewController" modalPresentationStyle="fullScreen" id="fhM-OI-Kiu" customClass="MessageViewController" customModule="Class_Chat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mGR-V8-OC7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -952,11 +952,18 @@
                     <navigationItem key="navigationItem" title="Messages" id="jO3-8v-wY8">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="chevron.backward" catalog="system" id="znR-SQ-r8d">
                             <color key="tintColor" systemColor="systemGreenColor"/>
+                            <connections>
+                                <action selector="messagesBackButton:" destination="fhM-OI-Kiu" id="vzR-bU-CSz"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="paperplane.fill" catalog="system" id="aFT-4f-nuQ">
                             <color key="tintColor" systemColor="systemGreenColor"/>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="messagesBackButton" destination="znR-SQ-r8d" id="EYs-GZ-DdF"/>
+                        <outlet property="myTable" destination="vrB-zh-rQu" id="n1o-lW-uks"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u69-EE-hgg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
