--- a/Class Chat/Base.lproj/Main.storyboard
+++ b/Class Chat/Base.lproj/Main.storyboard
@@ -757,7 +757,7 @@
                             <barButtonItem title="Item" image="plus" catalog="system" id="uJb-ZJ-oet">
                                 <color key="tintColor" systemColor="systemGreenColor"/>
                                 <connections>
-                                    <segue destination="fyb-8K-jnx" kind="presentation" id="URk-ka-W8b"/>
+                                    <segue destination="fyb-8K-jnx" kind="presentation" id="QTY-s9-PD3"/>
                                 </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
@@ -839,48 +839,50 @@
             </objects>
             <point key="canvasLocation" x="2780" y="129"/>
         </scene>
-        <!--View Controller-->
+        <!--Create Class View Controller-->
         <scene sceneID="s9W-Pr-U6R">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="fyb-8K-jnx" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateClassViewController" modalPresentationStyle="fullScreen" id="fyb-8K-jnx" customClass="CreateClassViewController" customModule="Class_Chat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="llF-i6-kPD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create a Class" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xcR-RW-Nji">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Create a Class" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xcR-RW-Nji">
                                 <rect key="frame" x="24" y="44" width="210" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of class..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oEG-N4-1gA">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of class..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oEG-N4-1gA">
                                 <rect key="frame" x="20" y="87" width="374" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="oUB-Dz-scp"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WUa-lZ-1vn">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WUa-lZ-1vn">
                                 <rect key="frame" x="20" y="174" width="374" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="LCP-8k-2Yn"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SnK-ci-vQQ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Your Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SnK-ci-vQQ">
                                 <rect key="frame" x="20" y="143" width="93" height="23"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qF0-rH-FDr">
-                                <rect key="frame" x="20" y="433" width="374" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="hKZ-e7-w9G"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XxB-WZ-cQ3">
+                                <rect key="frame" x="24" y="433" width="169" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" systemColor="systemGreenColor"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yWo-Oy-1qW">
+                                <rect key="frame" x="225" y="433" width="169" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleColor" systemColor="systemGreenColor"/>
                                 </state>
@@ -888,26 +890,6 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jRB-eD-xVK"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="SnK-ci-vQQ" firstAttribute="top" secondItem="oEG-N4-1gA" secondAttribute="bottom" constant="22" id="6uU-Ks-qD0"/>
-                            <constraint firstItem="qF0-rH-FDr" firstAttribute="top" secondItem="WUa-lZ-1vn" secondAttribute="bottom" constant="225" id="7CN-Af-nQa"/>
-                            <constraint firstItem="qF0-rH-FDr" firstAttribute="top" secondItem="WUa-lZ-1vn" secondAttribute="bottom" constant="225" id="CjT-fo-HUZ"/>
-                            <constraint firstItem="WUa-lZ-1vn" firstAttribute="leading" secondItem="jRB-eD-xVK" secondAttribute="leading" constant="20" id="E43-9a-2Qe"/>
-                            <constraint firstItem="xcR-RW-Nji" firstAttribute="leading" secondItem="jRB-eD-xVK" secondAttribute="leading" constant="24" id="EHJ-Bz-OMV"/>
-                            <constraint firstItem="jRB-eD-xVK" firstAttribute="trailing" secondItem="qF0-rH-FDr" secondAttribute="trailing" constant="20" id="Hb7-LR-rbm"/>
-                            <constraint firstItem="jRB-eD-xVK" firstAttribute="trailing" secondItem="xcR-RW-Nji" secondAttribute="trailing" constant="180" id="HrT-km-jfs"/>
-                            <constraint firstItem="jRB-eD-xVK" firstAttribute="trailing" secondItem="SnK-ci-vQQ" secondAttribute="trailing" constant="301" id="KHE-PH-vjM"/>
-                            <constraint firstItem="SnK-ci-vQQ" firstAttribute="top" secondItem="oEG-N4-1gA" secondAttribute="bottom" constant="22" id="O81-TQ-7uM"/>
-                            <constraint firstItem="oEG-N4-1gA" firstAttribute="leading" secondItem="jRB-eD-xVK" secondAttribute="leading" constant="20" id="Qzt-oO-vhz"/>
-                            <constraint firstItem="jRB-eD-xVK" firstAttribute="trailing" secondItem="oEG-N4-1gA" secondAttribute="trailing" constant="20" id="SQU-8i-3MF"/>
-                            <constraint firstItem="qF0-rH-FDr" firstAttribute="leading" secondItem="jRB-eD-xVK" secondAttribute="leading" constant="20" id="WgG-ST-L43"/>
-                            <constraint firstItem="SnK-ci-vQQ" firstAttribute="leading" secondItem="jRB-eD-xVK" secondAttribute="leading" constant="20" id="X3m-t3-YwP"/>
-                            <constraint firstItem="xcR-RW-Nji" firstAttribute="top" secondItem="jRB-eD-xVK" secondAttribute="top" id="dey-Xe-qUn"/>
-                            <constraint firstItem="oEG-N4-1gA" firstAttribute="top" secondItem="xcR-RW-Nji" secondAttribute="bottom" constant="2" id="eEJ-4h-Gbt"/>
-                            <constraint firstItem="jRB-eD-xVK" firstAttribute="bottom" secondItem="qF0-rH-FDr" secondAttribute="bottom" constant="399" id="hPV-L0-TSa"/>
-                            <constraint firstItem="oEG-N4-1gA" firstAttribute="top" secondItem="xcR-RW-Nji" secondAttribute="bottom" constant="2" id="khr-5W-7Il"/>
-                            <constraint firstItem="jRB-eD-xVK" firstAttribute="trailing" secondItem="WUa-lZ-1vn" secondAttribute="trailing" constant="20" id="pJ3-XV-hg7"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p4q-Cb-vxT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
