Cancel Button Works

--- a/Class Chat/Base.lproj/Main.storyboard
+++ b/Class Chat/Base.lproj/Main.storyboard
@@ -879,6 +879,9 @@
                                 <state key="normal" title="Cancel">
                                     <color key="titleColor" systemColor="systemGreenColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="cancelButtonIsPressed:" destination="fyb-8K-jnx" eventType="touchUpInside" id="KYQ-YG-UxB"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yWo-Oy-1qW">
                                 <rect key="frame" x="225" y="433" width="169" height="30"/>
