--- a/Class Chat/Base.lproj/Main.storyboard
+++ b/Class Chat/Base.lproj/Main.storyboard
@@ -176,6 +176,9 @@
                     <navigationItem key="navigationItem" title="Announcements" id="5Ra-p7-ahl">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="chevron.backward" catalog="system" id="Kgb-Ph-qZ2">
                             <color key="tintColor" systemColor="systemGreenColor"/>
+                            <connections>
+                                <action selector="announcementsBackPressed:" destination="ZfI-ZA-tss" id="hRu-ER-ey3"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="lJ5-Ux-Bbl">
                             <color key="tintColor" systemColor="systemGreenColor"/>
@@ -700,44 +703,54 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Class Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acy-Hr-LsX">
-                                                    <rect key="frame" x="20" y="11" width="98.5" height="20"/>
+                                                    <rect key="frame" x="20.5" y="11.5" width="98.5" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="HuX-Uo-NcM"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="rgz-6D-uzt">
-                                                    <rect key="frame" x="296" y="11" width="98" height="20.5"/>
+                                                    <rect key="frame" x="296.5" y="11.5" width="98.5" height="20"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Grade:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7sd-FM-hBn">
-                                                            <rect key="frame" x="0.0" y="0.0" width="51.5" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="52" height="20"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" systemColor="systemGrayColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msx-Mp-VOX">
-                                                            <rect key="frame" x="54.5" y="0.0" width="43.5" height="20.5"/>
+                                                            <rect key="frame" x="55" y="0.0" width="43.5" height="20"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" systemColor="systemGrayColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="98.5" id="P2G-mf-7Eo"/>
+                                                        <constraint firstAttribute="height" constant="20" id="Sii-IS-OUx"/>
+                                                        <constraint firstItem="msx-Mp-VOX" firstAttribute="leading" secondItem="7sd-FM-hBn" secondAttribute="trailing" constant="3" id="e2O-Yp-Pqi"/>
+                                                        <constraint firstItem="7sd-FM-hBn" firstAttribute="top" secondItem="rgz-6D-uzt" secondAttribute="top" id="qP6-Xr-nPt"/>
+                                                    </constraints>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Teacher" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cvc-sn-2Cb">
-                                                    <rect key="frame" x="20" y="93" width="374" height="20.5"/>
+                                                    <rect key="frame" x="20.5" y="93" width="374" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" systemColor="systemGrayColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="acy-Hr-LsX" firstAttribute="leading" secondItem="m7x-dc-p62" secondAttribute="leadingMargin" id="3t7-5h-fyg"/>
-                                                <constraint firstItem="Cvc-sn-2Cb" firstAttribute="leading" secondItem="m7x-dc-p62" secondAttribute="leadingMargin" id="6NI-SO-rfK"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="rgz-6D-uzt" secondAttribute="trailing" id="APr-Qz-6ZD"/>
-                                                <constraint firstItem="acy-Hr-LsX" firstAttribute="top" secondItem="m7x-dc-p62" secondAttribute="topMargin" id="LfD-C5-yud"/>
-                                                <constraint firstItem="Cvc-sn-2Cb" firstAttribute="top" secondItem="acy-Hr-LsX" secondAttribute="bottom" constant="62" id="YWM-2o-dOF"/>
-                                                <constraint firstItem="Cvc-sn-2Cb" firstAttribute="top" secondItem="rgz-6D-uzt" secondAttribute="bottom" constant="61.5" id="Zdh-Hi-KkW"/>
-                                                <constraint firstItem="rgz-6D-uzt" firstAttribute="top" secondItem="m7x-dc-p62" secondAttribute="topMargin" id="we6-kL-U3t"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Cvc-sn-2Cb" secondAttribute="trailing" id="zFl-qX-JL2"/>
+                                                <constraint firstItem="acy-Hr-LsX" firstAttribute="top" secondItem="m7x-dc-p62" secondAttribute="topMargin" constant="0.5" id="25M-jN-hHI"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Cvc-sn-2Cb" secondAttribute="bottom" constant="0.5" id="DZg-Pd-Vc4"/>
+                                                <constraint firstItem="Cvc-sn-2Cb" firstAttribute="top" secondItem="rgz-6D-uzt" secondAttribute="bottom" constant="61.5" id="G95-Ab-G6K"/>
+                                                <constraint firstItem="Cvc-sn-2Cb" firstAttribute="top" secondItem="acy-Hr-LsX" secondAttribute="bottom" constant="61.5" id="P1Q-tI-Bpd"/>
+                                                <constraint firstItem="rgz-6D-uzt" firstAttribute="leading" secondItem="acy-Hr-LsX" secondAttribute="trailing" constant="177.5" id="RXM-jL-ioa"/>
+                                                <constraint firstItem="Cvc-sn-2Cb" firstAttribute="trailing" secondItem="m7x-dc-p62" secondAttribute="trailingMargin" constant="0.5" id="Vnt-a6-l57"/>
+                                                <constraint firstItem="rgz-6D-uzt" firstAttribute="leading" secondItem="acy-Hr-LsX" secondAttribute="trailing" constant="177.5" id="W0M-a1-HCq"/>
+                                                <constraint firstItem="acy-Hr-LsX" firstAttribute="leading" secondItem="m7x-dc-p62" secondAttribute="leadingMargin" constant="0.5" id="XEd-R0-knt"/>
+                                                <constraint firstItem="Cvc-sn-2Cb" firstAttribute="leading" secondItem="m7x-dc-p62" secondAttribute="leadingMargin" constant="0.5" id="h5z-t1-4uI"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
